--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - 8088:8088
     volumes:
       - /var/lib/influxdb:/var/lib/influxdb:Z
-    command: influxd
+    command: ./influxdb-1.7.9-1/usr/bin/influxd
     network_mode: host
   signalk:
     image: signalk:signalk
